# aider-lint-fixer

./: .env.example  .flake8  .gitignore  CHANGELOG.md  COVERAGE_IMPROVEMENT_SUMMARY.md  DEPENDENCY_MANAGEMENT.md  FOLLOW_UP_TEST_FIXES.md  Makefile  PRODUCTION_READINESS_REPORT.md  README.md  RELEASE_NOTES_v1.5.0.md  RELEASE_NOTES_v1.6.0.md  RELEASE_NOTES_v1.7.0.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.0.1.md  RELEASE_v1.1.0.md  RELEASE_v1.4.0.md  TESTING.md  community_learning_system.py  enhanced_interactive_mode_proposal.py  install.sh  main.yml  mock-ansible-lint  multi_language_community_learning.py  pyproject.toml  requirements-dev-lock.txt  requirements-dev.in  requirements-dev.txt  requirements-lock.txt  requirements-test.txt  requirements.in  requirements.txt  setup.py  setup_env.sh  test_ansible_environment.py  test_ansible_integration.py
.devcontainer/: devcontainer.json
.github/: DOCKER_WORKFLOW_SETUP.md  dependabot.yml
.github/workflows/: ansible-lint-centos9.yml  dependabot-auto-merge.yml  dependency-conflict-check.yml  dependency-health.yml  deploy-docs-main-branch.yml  deploy-docs.yml  docker-publish.yml  fast-check.yml  pr-check.yml  release.yml  smart-version-check.yml  test-build.yml  test-install-script.yml
_site/: 404.html  index.html  mkdocs.yml  sitemap.xml
_site/CONTRIBUTOR_VERSION_GUIDE/: index.html
_site/INSTALLATION_GUIDE/: index.html
_site/LINTER_TESTING_GUIDE/: index.html
_site/adrs/: index.html
aider_lint_fixer/: __init__.py  __main__.py  aider_integration.py  aider_strategic_recommendations.py  ast_dependency_analyzer.py  cache_cli.py  community_issue_reporter.py  config_manager.py  context_manager.py  control_flow_analyzer.py  convergence_analyzer.py  cost_monitor.py  enhanced_interactive.py  environment_context_manager.py  error_analyzer.py  intelligent_force_mode.py  iterative_force_mode.py  lint_runner.py  main.py  native_lint_detector.py  pattern_matcher.py  pre_lint_assessment.py  progress_tracker.py  project_detector.py  rule_scraper.py  smart_linter_selector.py  strategic_preflight_check.py  structural_analyzer.py  supported_versions.py
docs/: ANSIBLE_LINT_INTEGRATION_SUMMARY.md  CONTRIBUTOR_VERSION_GUIDE.md  INSTALLATION_GUIDE.md  LINTER_TESTING_GUIDE.md  NODEJS_LINTERS_GUIDE.md  RELEASE_MANAGEMENT.md  SMART_VERSION_MANAGEMENT.md  index.md
mcp-shrimp-task-manager/: WebGUI.md
releases/: README.md  RELEASE_NOTES_v1.8.0.md  RELEASE_NOTES_v1.9.0.md  RELEASE_v1.2.0.md  TEMPLATE.md
scripts/: check_learning_setup.py  check_supported_versions.sh  clean-coverage.sh  create_release.py  generate_fallback_release_notes.sh  generate_release_notes.py  get_version.py  install.sh  manage_aider_dependencies.py  release_readiness_analyzer.py  smart_changelog_generator.py  smart_version_resolver.py  smart_version_validator.py
test-do-not-commit/: mcp-url-knowledge-graph
test_ansible/: ansible_output.json  bad_playbook.yml  playbook.yml
test_ansible_issue/: playbook.yml
test_nodejs/: .eslintrc.js  package-lock.json  package.json  problematic_code.js
test_python/: large_problematic_file.py  problematic_code.py
test_venv_311/: pyvenv.cfg
tests/: README_NEW_TESTS.md  __init__.py  conftest.py  test_aider_integration.py  test_aider_integration_public_methods.py  test_aider_strategic_recommendations.py  test_ansible_lint_integration.py  test_ast_dependency_analyzer.py  test_cache_cli.py  test_community_issue_reporter.py  test_context_manager.py  test_control_flow_analyzer.py  test_convergence_analyzer.py  test_cost_monitor.py  test_enhanced_error_analyzer.py  test_enhanced_error_classification.py  test_enhanced_error_classification_simplified.py  test_enhanced_interactive_integration.py  test_enhanced_parameterized.py  test_enhanced_pattern_matching.py  test_environment_context_awareness.py  test_eslint_config_detection.py  test_eslint_flat_config_bug.py  test_eslint_json_parsing_bug.py  test_intelligent_force_mode.py  test_iterative_force_mode.py  test_json_parsing_robustness.py  test_main.py  test_native_lint_detector.py  test_new_features.py  test_nodejs_lint_integration.py  test_performance_benchmarks.py  test_pre_lint_assessment.py  test_progress_tracking.py  test_python_lint_integration.py  test_rule_scraper.py  test_runner.py  test_smart_linter_selector.py  test_strategic_preflight_check.py  test_structural_analyzer.py  (+3 more)
(+130 files in other folders)
